<resources>
    <string name="app_name">Ajeeb</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">REGISTER</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="please_wait">Please Wait&#8230;</string>


    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_orders">Orders</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_product">Add Product</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="title_product_description">Product Description</string>
    <string name="title_product_details_stock_quantity">Stock Quantity</string>


    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>

    <dimen name="rv_cart_items_marginTop">16dp</dimen>
    <dimen name="ll_checkout_padding">16dp</dimen>
    <dimen name="checkout_label_value_textSize">18sp</dimen>

</resources>